objects/AsiaProfitCalculationRate__c.object
<CustomObject>
    <fields>
        <fullName>CurrencyBase__c</fullName>
        <label>Currency Base</label>
        <picklist>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrencyToConvert__c</fullName>
        <label>Currency To Convert</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Calculation__c</fullName>
        <label>Profit Calculation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipName>ProfitCalculation_ProfitCalculationRate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quotation Rate</label>
    <nameField>
        <displayFormat>PCR-{00000000}</displayFormat>
        <label>Profit Calculation Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>